objects/Comments__c.object
<CustomObject>
    <fields>
        <fullName>Cancellation_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancellation Form</label>
        <referenceTo>Cancellation_Request__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fulfillment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fulfillment</label>
        <referenceTo>Fulfillment__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Owner__c</fullName>
        <label>Parent Owner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Performance_Analysis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Performance Analysis</label>
        <referenceTo>Performance_Analysis__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quality_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quality Case</label>
        <referenceTo>Quality_Case__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>What_type_of_Comment__c</fullName>
        <formula>IF(Cancellation_Form__c &lt;&gt; "", "Cancellation", IF( Opportunity__c &lt;&gt; "", "Opportunity",""))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>What type of Comment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Worksheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Worksheet</label>
        <referenceTo>Worksheets__c</referenceTo>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Comment</label>
    <nameField>
        <displayFormat>COM-{00000}</displayFormat>
        <label>Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <recordTypes>
        <fullName>Comments</fullName>
        <active>true</active>
        <label>Comments</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>